Code refactoring for better readability